# phi4-aiops

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-azure.yml  deploy-vmware.yml
docs/wiki/: 01-Architecture-Fundamentals.md  02-Environment-and-Prerequisites.md  03-Deploy-on-Azure-Windows-VM.md  04-Deploy-on-VMware-Windows-VM.md  05-Windows-Bootstrap-and-Log-Collection.md  06-Run-the-AIOps-API-and-Query-Flow.md  07-Teams-Integration-Guide.md  08-Troubleshooting-and-Debugging.md  09-Production-Hardening-Checklist.md  10-FAQ.md  Home.md
scripts/windows/: bootstrap-aiops.ps1  collect-events.ps1
src/aiops_copilot/: config.py  main.py  models.py  service.py
src/aiops_copilot/integrations/: azure_monitor.py  ollama_client.py  teams_bot.py
src/aiops_copilot/rag/: vector_store.py
terraform/azure/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/vmware/: main.tf  outputs.tf  providers.tf  variables.tf
