[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phi4-aiops-copilot"
version = "0.1.0"
description = "Production-ready local AIOps copilot for Windows servers on VMware and Azure"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "phi4-aiops contributors"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "azure-monitor-query>=1.3.0",
  "azure-identity>=1.17.0",
  "botbuilder-core>=4.15.0",
  "botbuilder-schema>=4.15.0",
  "tenacity>=9.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
